--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Talacay</title>
-    <link rel="icon" href="{% static 'C:\Users\fafaj\Desktop\WebApp\WebApp\static\images\Talacay.ico' %}">
+    <link rel="icon" href="{% static 'C:\Users\fafaj\Desktop\Talacay\Talacay\static\images\Talacay.ico' %}">
     <link rel="stylesheet" type ="text/css" href="{% static 'css/base.css' %}">
 </head>
 <body>
