--- a/app/templates/app/home.html
+++ b/app/templates/app/home.html
@@ -1,6 +1,8 @@
 {% extends 'app/base.html' %}
+{% load static %}
 {% block content %}
+    <img class="bground" src="{% static 'images/11.jpg'%}">
 <div class="content-container">
     <h1>Hi, <br> I'm Jem.</h1>
-
+</div>
 {% endblock content %}
