--- a/app/templates/app/navbar.html
+++ b/app/templates/app/navbar.html
@@ -1,5 +1,25 @@
-
-<header>
-    <a href="{% url 'home' %}">Home</a>
-    <a href="{% url 'about' %}">About</a>
-</header>
+<nav>
+    <div class="nav-col">
+        <div class="nav-items">
+            <a href="{% url 'home' %}">Talacay</a>
+        </div>
+        <div class="nav-items">
+            <p>Personal Portfolio</p>
+        </div>
+    </div>
+    <div class="nav-col">
+        <div class="nav-items">
+            <a href="{% url 'about' %}">About</a>
+            <a href="#">Works</a>
+            <a href="#">Contact</a>
+        </div>
+        <div class="nav-items">
+            <a href="#">Instagram</a>
+            <a href="#">LinkedIn</a>
+            <a href="#">Twitter</a>
+        </div>
+        <div class="nav-items">
+            <p>Manila, Philippines</p>
+        </div>
+    </div>
+</nav>
