--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <!-- {% include 'app/navbar.html' %}  Make sure this line is included -->
+    <!-- {% include 'app/navbar.html' %} -->
 
     {% block content %}
     {% endblock content %}
